--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html{
+  height: 100vh;
 }
+
+body::-webkit-scrollbar {
+  width: 8px;              /* width of the entire scrollbar */
+}
+
+body::-webkit-scrollbar-track {
+  background: white;       /* color of the tracking area */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #20A4F3;    /* color of the scroll thumb */      /* roundness of the scroll thumb */
+  border: 3px solid #20A4F3;
+  border-radius: 5px;  /* creates padding around scroll thumb */
+}
+
